Add menu entries to create domain elements (e.g. securities)
Convert domain actions to e4 commands and handlers. By extracting the
creation of new securities, watchlists, taxonomies, etc. into separate
commands, they can more easily be triggered from the menu, command
palette, etc.

Newly created securities are published to the  event broker so that the
security list can add them to the current watchlist and select the newly
created security.

Issue: #3396